# test_pytest

./: pyproject.toml
git/: README.md
tests/: conftest.py  test_fixture.py  test_functions.py  test_operation.json
utils/: functions.py  main.py
